编译原理/lab1/exp.output
Grammar

    0 $accept: program $end

    1 program: ExtDefList

    2 ExtDefList: /* empty */
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier FuncDec CompSt
    6       | error SEMI

    7 Specifier: TYPE

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList
   10           | VarDec ASSIGNOP Exp

   11 VarDec: ID
   12       | VarDec LB INT RB

   13 FuncDec: ID LP VarList RP
   14        | ID LP RP

   15 VarList: ParamDec
   16        | ParamDec COMMA VarList

   17 ParamDec: Specifier VarDec

   18 CompSt: LC DefList StmList RC

   19 StmList: /* empty */
   20        | Stmt StmList

   21 Stmt: Exp SEMI
   22     | CompSt
   23     | RETURN Exp SEMI
   24     | IF LP Exp RP Stmt
   25     | IF LP Exp RP Stmt ELSE Stmt
   26     | WHILE LP Exp RP Stmt
   27     | error SEMI

   28 DefList: /* empty */
   29        | Def DefList

   30 Def: Specifier DecList SEMI

   31 DecList: Dec
   32        | Dec COMMA DecList

   33 Dec: VarDec
   34    | VarDec ASSIGNOP Exp

   35 Exp: Exp ASSIGNOP Exp
   36    | Exp AND Exp
   37    | Exp OR Exp
   38    | Exp RELOP Exp
   39    | Exp PLUS Exp
   40    | Exp MINUS Exp
   41    | Exp STAR Exp
   42    | Exp DIV Exp
   43    | LP Exp RP
   44    | MINUS Exp
   45    | AUTOINC Exp
   46    | AUTODEC Exp
   47    | Exp AUTOINC
   48    | Exp AUTODEC
   49    | NOT Exp
   50    | ID LP Args RP
   51    | ID LP RP
   52    | VarDec LB INT RB
   53    | ID
   54    | INT
   55    | FLOAT
   56    | CHAR

   57 Args: Exp COMMA Args
   58     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 6 27
INT (258) 12 52 54
ID (259) 11 13 14 50 51 53
RELOP (260) 38
ASSIGNOP (261) 10 34 35
TYPE (262) 7
AUTOINC (263) 45 47
AUTODEC (264) 46 48
FLOAT (265) 55
CHAR (266) 56
LP (267) 13 14 24 25 26 43 50 51
RP (268) 13 14 24 25 26 43 50 51
LB (269) 12 52
RB (270) 12 52
LC (271) 18
RC (272) 18
SEMI (273) 4 6 21 23 27 30
COMMA (274) 9 16 32 57
PLUS (275) 39
MINUS (276) 40 44
STAR (277) 41
DIV (278) 42
AND (279) 36
OR (280) 37
NOT (281) 49
IF (282) 24 25
ELSE (283) 25
WHILE (284) 26
RETURN (285) 23
UMINUS (286)
LOWER_THEN_ELSE (287)


Nonterminals, with rules where they appear

$accept (33)
    on left: 0
program (34)
    on left: 1, on right: 0
ExtDefList (35)
    on left: 2 3, on right: 1 3
ExtDef (36)
    on left: 4 5 6, on right: 3
Specifier (37)
    on left: 7, on right: 4 5 17 30
ExtDecList (38)
    on left: 8 9 10, on right: 4 9
VarDec (39)
    on left: 11 12, on right: 8 9 10 12 17 33 34 52
FuncDec (40)
    on left: 13 14, on right: 5
VarList (41)
    on left: 15 16, on right: 13 16
ParamDec (42)
    on left: 17, on right: 15 16
CompSt (43)
    on left: 18, on right: 5 22
StmList (44)
    on left: 19 20, on right: 18 20
Stmt (45)
    on left: 21 22 23 24 25 26 27, on right: 20 24 25 26
DefList (46)
    on left: 28 29, on right: 18 29
Def (47)
    on left: 30, on right: 29
DecList (48)
    on left: 31 32, on right: 30 32
Dec (49)
    on left: 33 34, on right: 31 32
Exp (50)
    on left: 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52
    53 54 55 56, on right: 10 21 23 24 25 26 34 35 36 37 38 39 40 41
    42 43 44 45 46 47 48 49 57 58
Args (51)
    on left: 57 58, on right: 50 57


state 0

    0 $accept: . program $end

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    $end  reduce using rule 2 (ExtDefList)

    program     go to state 3
    ExtDefList  go to state 4
    ExtDef      go to state 5
    Specifier   go to state 6


state 1

    6 ExtDef: error . SEMI

    SEMI  shift, and go to state 7


state 2

    7 Specifier: TYPE .

    $default  reduce using rule 7 (Specifier)


state 3

    0 $accept: program . $end

    $end  shift, and go to state 8


state 4

    1 program: ExtDefList .

    $default  reduce using rule 1 (program)


state 5

    3 ExtDefList: ExtDef . ExtDefList

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList  go to state 9
    ExtDef      go to state 5
    Specifier   go to state 6


state 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . FuncDec CompSt

    ID  shift, and go to state 10

    ExtDecList  go to state 11
    VarDec      go to state 12
    FuncDec     go to state 13


state 7

    6 ExtDef: error SEMI .

    $default  reduce using rule 6 (ExtDef)


state 8

    0 $accept: program $end .

    $default  accept


state 9

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


state 10

   11 VarDec: ID .
   13 FuncDec: ID . LP VarList RP
   14        | ID . LP RP

    LP  shift, and go to state 14

    $default  reduce using rule 11 (VarDec)


state 11

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 15


state 12

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   10           | VarDec . ASSIGNOP Exp
   12 VarDec: VarDec . LB INT RB

    ASSIGNOP  shift, and go to state 16
    LB        shift, and go to state 17
    COMMA     shift, and go to state 18

    $default  reduce using rule 8 (ExtDecList)


state 13

    5 ExtDef: Specifier FuncDec . CompSt

    LC  shift, and go to state 19

    CompSt  go to state 20


state 14

   13 FuncDec: ID LP . VarList RP
   14        | ID LP . RP

    TYPE  shift, and go to state 2
    RP    shift, and go to state 21

    Specifier  go to state 22
    VarList    go to state 23
    ParamDec   go to state 24


state 15

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


state 16

   10 ExtDecList: VarDec ASSIGNOP . Exp

    INT      shift, and go to state 25
    ID       shift, and go to state 26
    AUTOINC  shift, and go to state 27
    AUTODEC  shift, and go to state 28
    FLOAT    shift, and go to state 29
    CHAR     shift, and go to state 30
    LP       shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33

    VarDec  go to state 34
    Exp     go to state 35


state 17

   12 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 36


state 18

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 37

    ExtDecList  go to state 38
    VarDec      go to state 12


state 19

   18 CompSt: LC . DefList StmList RC

    TYPE  shift, and go to state 2

    $default  reduce using rule 28 (DefList)

    Specifier  go to state 39
    DefList    go to state 40
    Def        go to state 41


state 20

    5 ExtDef: Specifier FuncDec CompSt .

    $default  reduce using rule 5 (ExtDef)


state 21

   14 FuncDec: ID LP RP .

    $default  reduce using rule 14 (FuncDec)


state 22

   17 ParamDec: Specifier . VarDec

    ID  shift, and go to state 37

    VarDec  go to state 42


state 23

   13 FuncDec: ID LP VarList . RP

    RP  shift, and go to state 43


state 24

   15 VarList: ParamDec .
   16        | ParamDec . COMMA VarList

    COMMA  shift, and go to state 44

    $default  reduce using rule 15 (VarList)


state 25

   54 Exp: INT .

    $default  reduce using rule 54 (Exp)


state 26

   11 VarDec: ID .
   50 Exp: ID . LP Args RP
   51    | ID . LP RP
   53    | ID .

    LP  shift, and go to state 45

    LB        reduce using rule 11 (VarDec)
    $default  reduce using rule 53 (Exp)


state 27

   45 Exp: AUTOINC . Exp

    INT      shift, and go to state 25
    ID       shift, and go to state 26
    AUTOINC  shift, and go to state 27
    AUTODEC  shift, and go to state 28
    FLOAT    shift, and go to state 29
    CHAR     shift, and go to state 30
    LP       shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33

    VarDec  go to state 34
    Exp     go to state 46


state 28

   46 Exp: AUTODEC . Exp

    INT      shift, and go to state 25
    ID       shift, and go to state 26
    AUTOINC  shift, and go to state 27
    AUTODEC  shift, and go to state 28
    FLOAT    shift, and go to state 29
    CHAR     shift, and go to state 30
    LP       shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33

    VarDec  go to state 34
    Exp     go to state 47


state 29

   55 Exp: FLOAT .

    $default  reduce using rule 55 (Exp)


state 30

   56 Exp: CHAR .

    $default  reduce using rule 56 (Exp)


state 31

   43 Exp: LP . Exp RP

    INT      shift, and go to state 25
    ID       shift, and go to state 26
    AUTOINC  shift, and go to state 27
    AUTODEC  shift, and go to state 28
    FLOAT    shift, and go to state 29
    CHAR     shift, and go to state 30
    LP       shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33

    VarDec  go to state 34
    Exp     go to state 48


state 32

   44 Exp: MINUS . Exp

    INT      shift, and go to state 25
    ID       shift, and go to state 26
    AUTOINC  shift, and go to state 27
    AUTODEC  shift, and go to state 28
    FLOAT    shift, and go to state 29
    CHAR     shift, and go to state 30
    LP       shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33

    VarDec  go to state 34
    Exp     go to state 49


state 33

   49 Exp: NOT . Exp

    INT      shift, and go to state 25
    ID       shift, and go to state 26
    AUTOINC  shift, and go to state 27
    AUTODEC  shift, and go to state 28
    FLOAT    shift, and go to state 29
    CHAR     shift, and go to state 30
    LP       shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33

    VarDec  go to state 34
    Exp     go to state 50


state 34

   12 VarDec: VarDec . LB INT RB
   52 Exp: VarDec . LB INT RB

    LB  shift, and go to state 51


state 35

   10 ExtDecList: VarDec ASSIGNOP Exp .
   35 Exp: Exp . ASSIGNOP Exp
   36    | Exp . AND Exp
   37    | Exp . OR Exp
   38    | Exp . RELOP Exp
   39    | Exp . PLUS Exp
   40    | Exp . MINUS Exp
   41    | Exp . STAR Exp
   42    | Exp . DIV Exp
   47    | Exp . AUTOINC
   48    | Exp . AUTODEC

    RELOP     shift, and go to state 52
    ASSIGNOP  shift, and go to state 53
    AUTOINC   shift, and go to state 54
    AUTODEC   shift, and go to state 55
    PLUS      shift, and go to state 56
    MINUS     shift, and go to state 57
    STAR      shift, and go to state 58
    DIV       shift, and go to state 59
    AND       shift, and go to state 60
    OR        shift, and go to state 61

    $default  reduce using rule 10 (ExtDecList)


state 36

   12 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 62


state 37

   11 VarDec: ID .

    $default  reduce using rule 11 (VarDec)


state 38

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


state 39

   30 Def: Specifier . DecList SEMI

    ID  shift, and go to state 37

    VarDec   go to state 63
    DecList  go to state 64
    Dec      go to state 65


state 40

   18 CompSt: LC DefList . StmList RC

    error    shift, and go to state 66
    INT      shift, and go to state 25
    ID       shift, and go to state 26
    AUTOINC  shift, and go to state 27
    AUTODEC  shift, and go to state 28
    FLOAT    shift, and go to state 29
    CHAR     shift, and go to state 30
    LP       shift, and go to state 31
    LC       shift, and go to state 19
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    IF       shift, and go to state 67
    WHILE    shift, and go to state 68
    RETURN   shift, and go to state 69

    RC  reduce using rule 19 (StmList)

    VarDec   go to state 34
    CompSt   go to state 70
    StmList  go to state 71
    Stmt     go to state 72
    Exp      go to state 73


state 41

   29 DefList: Def . DefList

    TYPE  shift, and go to state 2

    $default  reduce using rule 28 (DefList)

    Specifier  go to state 39
    DefList    go to state 74
    Def        go to state 41


state 42

   12 VarDec: VarDec . LB INT RB
   17 ParamDec: Specifier VarDec .

    LB  shift, and go to state 17

    $default  reduce using rule 17 (ParamDec)


state 43

   13 FuncDec: ID LP VarList RP .

    $default  reduce using rule 13 (FuncDec)


state 44

   16 VarList: ParamDec COMMA . VarList

    TYPE  shift, and go to state 2

    Specifier  go to state 22
    VarList    go to state 75
    ParamDec   go to state 24


state 45

   50 Exp: ID LP . Args RP
   51    | ID LP . RP

    INT      shift, and go to state 25
    ID       shift, and go to state 26
    AUTOINC  shift, and go to state 27
    AUTODEC  shift, and go to state 28
    FLOAT    shift, and go to state 29
    CHAR     shift, and go to state 30
    LP       shift, and go to state 31
    RP       shift, and go to state 76
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33

    VarDec  go to state 34
    Exp     go to state 77
    Args    go to state 78


state 46

   35 Exp: Exp . ASSIGNOP Exp
   36    | Exp . AND Exp
   37    | Exp . OR Exp
   38    | Exp . RELOP Exp
   39    | Exp . PLUS Exp
   40    | Exp . MINUS Exp
   41    | Exp . STAR Exp
   42    | Exp . DIV Exp
   45    | AUTOINC Exp .
   47    | Exp . AUTOINC
   48    | Exp . AUTODEC

    PLUS   shift, and go to state 56
    MINUS  shift, and go to state 57
    STAR   shift, and go to state 58
    DIV    shift, and go to state 59

    $default  reduce using rule 45 (Exp)


state 47

   35 Exp: Exp . ASSIGNOP Exp
   36    | Exp . AND Exp
   37    | Exp . OR Exp
   38    | Exp . RELOP Exp
   39    | Exp . PLUS Exp
   40    | Exp . MINUS Exp
   41    | Exp . STAR Exp
   42    | Exp . DIV Exp
   46    | AUTODEC Exp .
   47    | Exp . AUTOINC
   48    | Exp . AUTODEC

    PLUS   shift, and go to state 56
    MINUS  shift, and go to state 57
    STAR   shift, and go to state 58
    DIV    shift, and go to state 59

    $default  reduce using rule 46 (Exp)


state 48

   35 Exp: Exp . ASSIGNOP Exp
   36    | Exp . AND Exp
   37    | Exp . OR Exp
   38    | Exp . RELOP Exp
   39    | Exp . PLUS Exp
   40    | Exp . MINUS Exp
   41    | Exp . STAR Exp
   42    | Exp . DIV Exp
   43    | LP Exp . RP
   47    | Exp . AUTOINC
   48    | Exp . AUTODEC

    RELOP     shift, and go to state 52
    ASSIGNOP  shift, and go to state 53
    AUTOINC   shift, and go to state 54
    AUTODEC   shift, and go to state 55
    RP        shift, and go to state 79
    PLUS      shift, and go to state 56
    MINUS     shift, and go to state 57
    STAR      shift, and go to state 58
    DIV       shift, and go to state 59
    AND       shift, and go to state 60
    OR        shift, and go to state 61


state 49

   35 Exp: Exp . ASSIGNOP Exp
   36    | Exp . AND Exp
   37    | Exp . OR Exp
   38    | Exp . RELOP Exp
   39    | Exp . PLUS Exp
   40    | Exp . MINUS Exp
   41    | Exp . STAR Exp
   42    | Exp . DIV Exp
   44    | MINUS Exp .
   47    | Exp . AUTOINC
   48    | Exp . AUTODEC

    $default  reduce using rule 44 (Exp)


state 50

   35 Exp: Exp . ASSIGNOP Exp
   36    | Exp . AND Exp
   37    | Exp . OR Exp
   38    | Exp . RELOP Exp
   39    | Exp . PLUS Exp
   40    | Exp . MINUS Exp
   41    | Exp . STAR Exp
   42    | Exp . DIV Exp
   47    | Exp . AUTOINC
   48    | Exp . AUTODEC
   49    | NOT Exp .

    $default  reduce using rule 49 (Exp)


state 51

   12 VarDec: VarDec LB . INT RB
   52 Exp: VarDec LB . INT RB

    INT  shift, and go to state 80


state 52

   38 Exp: Exp RELOP . Exp

    INT      shift, and go to state 25
    ID       shift, and go to state 26
    AUTOINC  shift, and go to state 27
    AUTODEC  shift, and go to state 28
    FLOAT    shift, and go to state 29
    CHAR     shift, and go to state 30
    LP       shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33

    VarDec  go to state 34
    Exp     go to state 81


state 53

   35 Exp: Exp ASSIGNOP . Exp

    INT      shift, and go to state 25
    ID       shift, and go to state 26
    AUTOINC  shift, and go to state 27
    AUTODEC  shift, and go to state 28
    FLOAT    shift, and go to state 29
    CHAR     shift, and go to state 30
    LP       shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33

    VarDec  go to state 34
    Exp     go to state 82


state 54

   47 Exp: Exp AUTOINC .

    $default  reduce using rule 47 (Exp)


state 55

   48 Exp: Exp AUTODEC .

    $default  reduce using rule 48 (Exp)


state 56

   39 Exp: Exp PLUS . Exp

    INT      shift, and go to state 25
    ID       shift, and go to state 26
    AUTOINC  shift, and go to state 27
    AUTODEC  shift, and go to state 28
    FLOAT    shift, and go to state 29
    CHAR     shift, and go to state 30
    LP       shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33

    VarDec  go to state 34
    Exp     go to state 83


state 57

   40 Exp: Exp MINUS . Exp

    INT      shift, and go to state 25
    ID       shift, and go to state 26
    AUTOINC  shift, and go to state 27
    AUTODEC  shift, and go to state 28
    FLOAT    shift, and go to state 29
    CHAR     shift, and go to state 30
    LP       shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33

    VarDec  go to state 34
    Exp     go to state 84


state 58

   41 Exp: Exp STAR . Exp

    INT      shift, and go to state 25
    ID       shift, and go to state 26
    AUTOINC  shift, and go to state 27
    AUTODEC  shift, and go to state 28
    FLOAT    shift, and go to state 29
    CHAR     shift, and go to state 30
    LP       shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33

    VarDec  go to state 34
    Exp     go to state 85


state 59

   42 Exp: Exp DIV . Exp

    INT      shift, and go to state 25
    ID       shift, and go to state 26
    AUTOINC  shift, and go to state 27
    AUTODEC  shift, and go to state 28
    FLOAT    shift, and go to state 29
    CHAR     shift, and go to state 30
    LP       shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33

    VarDec  go to state 34
    Exp     go to state 86


state 60

   36 Exp: Exp AND . Exp

    INT      shift, and go to state 25
    ID       shift, and go to state 26
    AUTOINC  shift, and go to state 27
    AUTODEC  shift, and go to state 28
    FLOAT    shift, and go to state 29
    CHAR     shift, and go to state 30
    LP       shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33

    VarDec  go to state 34
    Exp     go to state 87


state 61

   37 Exp: Exp OR . Exp

    INT      shift, and go to state 25
    ID       shift, and go to state 26
    AUTOINC  shift, and go to state 27
    AUTODEC  shift, and go to state 28
    FLOAT    shift, and go to state 29
    CHAR     shift, and go to state 30
    LP       shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33

    VarDec  go to state 34
    Exp     go to state 88


state 62

   12 VarDec: VarDec LB INT RB .

    $default  reduce using rule 12 (VarDec)


state 63

   12 VarDec: VarDec . LB INT RB
   33 Dec: VarDec .
   34    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 89
    LB        shift, and go to state 17

    $default  reduce using rule 33 (Dec)


state 64

   30 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 90


state 65

   31 DecList: Dec .
   32        | Dec . COMMA DecList

    COMMA  shift, and go to state 91

    $default  reduce using rule 31 (DecList)


state 66

   27 Stmt: error . SEMI

    SEMI  shift, and go to state 92


state 67

   24 Stmt: IF . LP Exp RP Stmt
   25     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 93


state 68

   26 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 94


state 69

   23 Stmt: RETURN . Exp SEMI

    INT      shift, and go to state 25
    ID       shift, and go to state 26
    AUTOINC  shift, and go to state 27
    AUTODEC  shift, and go to state 28
    FLOAT    shift, and go to state 29
    CHAR     shift, and go to state 30
    LP       shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33

    VarDec  go to state 34
    Exp     go to state 95


state 70

   22 Stmt: CompSt .

    $default  reduce using rule 22 (Stmt)


state 71

   18 CompSt: LC DefList StmList . RC

    RC  shift, and go to state 96


state 72

   20 StmList: Stmt . StmList

    error    shift, and go to state 66
    INT      shift, and go to state 25
    ID       shift, and go to state 26
    AUTOINC  shift, and go to state 27
    AUTODEC  shift, and go to state 28
    FLOAT    shift, and go to state 29
    CHAR     shift, and go to state 30
    LP       shift, and go to state 31
    LC       shift, and go to state 19
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    IF       shift, and go to state 67
    WHILE    shift, and go to state 68
    RETURN   shift, and go to state 69

    RC  reduce using rule 19 (StmList)

    VarDec   go to state 34
    CompSt   go to state 70
    StmList  go to state 97
    Stmt     go to state 72
    Exp      go to state 73


state 73

   21 Stmt: Exp . SEMI
   35 Exp: Exp . ASSIGNOP Exp
   36    | Exp . AND Exp
   37    | Exp . OR Exp
   38    | Exp . RELOP Exp
   39    | Exp . PLUS Exp
   40    | Exp . MINUS Exp
   41    | Exp . STAR Exp
   42    | Exp . DIV Exp
   47    | Exp . AUTOINC
   48    | Exp . AUTODEC
